--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram<3.0.0
-aiopywttr<3.0.0
-Pillow<10.0.0
-prettytable<4.0.0
-pywttr-models<2.0.0
+aiogram == 2.24
+aiopywttr == 2.1.0
+Pillow == 9.4.0
+prettytable == 3.6.0
+pywttr-models == 1.1.0 
+python-dotenv == 0.21.1 
